# crypto-data-ingestion

./: .gitignore  .readthedocs.yaml  Dockerfile  docker-compose.yml  mkdocs.yml  pyproject.toml
crypto_data_ingestion/: __init__.py  api.py  config.yaml  data_operations.py  storage.py
crypto_data_ingestion/src/: __init__.py  api.py  storage.py
docs/: index.md
docs/Documentation/: Data Operations.md  Storage Interface.md
